[package]
name = "systrack"
version = "0.1.0"
edition = "2021"
description = "Track system resource usage over custom lapses"
repository = "https://github.com/jdvillal/systrack"
license = "MIT OR Apache-2.0"
keywords = ["monitor", "tracker", "resource", "usage", "lapse"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.29.10"